[gd_scene load_steps=8 format=3 uid="uid://dlkqli26yx0tq"]

[ext_resource type="Script" uid="uid://yv51r4xfwu6h" path="res://scripts/snail.gd" id="2_2wu2h"]
[ext_resource type="Texture2D" uid="uid://djswxtdralcn3" path="res://Art/Enemies/Snail_sprite.png" id="2_i6obs"]
[ext_resource type="PackedScene" uid="uid://cto0pfv44ygox" path="res://scenes/health_pickup.tscn" id="2_kfcxn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wu2h"]
size = Vector2(156.66667, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfcxn"]
size = Vector2(193.33333, 56.666664)

[sub_resource type="SpriteFrames" id="SpriteFrames_s4s51"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i6obs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kttc3"]
size = Vector2(63.333336, 23.333332)

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("2_2wu2h")
health_drop = ExtResource("2_kfcxn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8.333328, 63.333332)
shape = SubResource("RectangleShape2D_2wu2h")

[node name="player_detection" type="Area2D" parent="." groups=["enemy_hitbox1"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
position = Vector2(-3.3333356, 45.000004)
shape = SubResource("RectangleShape2D_kfcxn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.95888215, 0, 0.13008961, 1)
z_index = 2
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_s4s51")
animation = &"idle"

[node name="rand_Move_Timer" type="Timer" parent="."]
wait_time = 6.032
one_shot = true

[node name="idle_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="attack_cooldow_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="player_detect_top" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect_top"]
position = Vector2(6.666666, -23.333334)
shape = SubResource("RectangleShape2D_kttc3")

[node name="health_spawn_point" type="Marker2D" parent="."]

[connection signal="body_entered" from="player_detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="player_detection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="rand_Move_Timer" to="." method="_on_rand_move_timer_timeout"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="attack_cooldow_timer" to="." method="_on_attack_cooldow_timer_timeout"]
[connection signal="body_entered" from="player_detect_top" to="." method="_on_player_detect_top_body_entered"]
